# Structura

./: CMakeLists.txt  flake.nix
include/: array.hpp  hash-table.hpp  linked-list.hpp  structura.hpp
